k8s/dz2/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: python-server-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway  # Используем стандартный Ingress Gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "istio.otus.ru"
